--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,14 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
+    implementation group: 'org.javatuples', name: 'javatuples', version: '1.2'
+    implementation group: 'com.google.guava', name: 'guava', version: '31.1-jre'
+
+
+
 }
 
 test {
